<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNSAlbums</string>
    <string name="idString">用户名 : </string>
    <string name="pwdString">密     码: </string>
    <string name="loginString">登      录 </string>
    <string name="registerString"> 注 册 </string>
    <string name="confpwd">确认密码:</string>
    <string name="name">昵      称:</string>
    <string name="email">邮      箱:</string>
    <string name="maybe">可    选</string>
    <string name="registerText">还没有账户?请点击  </string>
    <string name="remPwd">记住密码 </string>
    <string name="dalian">大连</string>
    <string name="mycity">所在城市</string>
    <string name="autologin">自动登录</string>
    <string name="address">地址</string>
    <string name="tongshitai">通世泰</string>
    <string name="des">大连火车站</string>
    <string name="bluetooth">蓝 牙</string>
    <string name="chat">聊  天</string>
    <string name="cameta">拍  照</string>
    <string name="map">地  图</string>
    <string name="picedit">编  辑</string>
    <string name="albums">相  册</string>
    <string name="telephone">电话号码</string>
    <string name="five">5</string>
    <string name="albumname">相册名:</string>
    <string name="pwd">密 码</string>
    <string name="userid">用户名</string>
    <string name="must">必 填</string>
    <string name="share">共享</string>
    <string name="desc">""</string>
	<string name="option">选项</string>
	<string name="clearcache">清除缓存</string>

    <!-- BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">你还没有连接蓝牙设备.</string>
    <string name="bt_not_enabled_leaving">蓝牙设备没有开启.</string>
    <string name="title_connecting">正在连接</string>
    <string name="title_connected_to">连接了: </string>
    <string name="title_not_connected">没有连接.</string>
    <string name="alert_dialog_from">起点:</string>
    <string name="alert_dialog_text_entry">路线查找</string>
    <string name="alert_dialog_to">终点:</string>

    <!-- DeviceListActivity -->
    <string name="scanning">扫描设备中</string>
    <string name="select_device">选择一个蓝牙设备进行连接.</string>
    <string name="none_paired">没有配对的设备.</string>
    <string name="none_found">没有发现设备.</string>
    <string name="title_paired_devices">配对的设备.</string>
    <string name="title_other_devices">其他可用设备.</string>
    <string name="button_scan">扫描</string>

    <string-array name="menuItems">
        <item>色彩模式</item>
        <item>闪光灯</item>
        <item>场景</item>
        <item>白平衡</item>
        <item>自拍模式</item>
        <item>相册</item>
        <item>帮助</item>
        <item>退出</item>
    </string-array>
    <string-array name="effectItems">
        <item>怀旧效果</item>
        <item>锐化效果</item>
        <item>光照效果</item>
        <item>底片效果</item>
        <item>浮雕效果</item>
        <item>模糊效果</item>
        <item>高斯模糊</item>
    </string-array>
    <string-array name="filterItems">
        <item>冰冻滤镜</item>
        <item>熔铸滤镜</item>
        <item>连环画滤镜</item>
        <item>边缘高亮</item>
    </string-array>
    <string-array name="colorEffectItems">
        <item>无特效</item>
        <item>单色模式</item>
        <item>负片模式</item>
        <item>曝光模式</item>
        <item>老照片</item>
        <item>白板模式</item>
        <item>黑板模式</item>
        <item>浅绿色模式</item>
    </string-array>

    <!-- 闪光灯模式 -->
    <string-array name="flashModesItems">
        <item>闪光</item>
        <item>自动</item>
        <item>消除红眼</item>
        <item>补光</item>
        <item>关闭</item>
    </string-array>

    <!-- 场景 SCENE -->

    <string-array name="sceneModesItems">
        <item>自动</item>
        <item>动作</item>
        <item>肖像</item>
        <item>风景</item>
        <item>夜间</item>
        <item>夜间肖像</item>
        <item>剧院</item>
        <item>海滩</item>
        <item>日落</item>
        <item>平稳图像</item>
        <item>烟火</item>
        <item>运动</item>
        <item>聚会</item>
        <item>雪景</item>
    </string-array>

    <!-- 白平衡 -->
    <string-array name="wBalanceModesItems">
        <item>自动</item>
        <item>白炽灯</item>
        <item>日光灯</item>
        <item>暖色调</item>
        <item>白天</item>
        <item>阴天</item>
        <item>黄昏</item>
        <item>阴影</item>
    </string-array>

    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="situation">饱和度 : </string>
    <string name="hue">色     相: </string>
    <string name="lightness">亮     度: </string>
    <string name="rotate">旋   转</string>
    <string name="effect">效   果</string>
    <string name="frame">相   框</string>
    <string name="palette">调色盘</string>
    <string name="delete">删   除</string>
    <string name="filter">滤   镜</string>
    <string name="main_help_text">\n
        1.拍照模块中,按住屏幕即可自动对焦,手指离开屏幕即可拍照.\n\n
        2.网络相册模块中可以查看自己的网络相册和本地相册。\n\n
        3.聊天模块中可以与好友进行聊天，可以查看好友的相册.\n\n
        4.图像编辑模块中可以修改图像的色彩、大小、饱和度、边框等.\n\n
        5.蓝牙模块中可以进行蓝牙聊天和分享照片给本地好友.</string>
    <string name="camera_help_text">\n
        1.按住屏幕即可自动对焦,手指离开屏幕自动拍照.\n
        2.可设置色彩模式、闪光灯模式、场景模式等\n</string>
    <string name="picedit_help_text">\n
        1.旋转：每次旋转90度.\n
        2.效果设置：设置图像的色彩模式.\n
        3.相框：给图像添加花边.\n
        4.调色盘:调整色相、饱和度、亮度.\n
        5.设置图像为壁纸\n
        6.分享照片到人人网\n
        7.保存图像到本地\n
        8.删除图像</string>

    <string-array name="poiMenu">
        <item>ATM</item>
        <item>KFC</item>
        <item>酒店</item>
        <item>餐馆</item>
        <item>旅馆</item>
        <item>医院</item>
        <item>公园</item>
        <item>书店</item>
        <item>KTV</item>
        <item>邮局</item>
        <item>移动营业厅</item>
        <item>超市</item>
        <item>商场</item>
        <item>菜市场</item>
    </string-array>

    <string name="carRadioBtn">驾车</string>
    <string name="busRadioBtn">公交</string>
    <string name="walkRadioBtn">步行</string>
    <string name="findRoute">获取路线</string>
    <string name="cancel">取消</string>
    <string name="other">其他</string>
    <string name="setting">设置</string>
    <string name="update">更新</string>
    <string name="auto_update_switch_title">自动更新</string>
    <string name="auto_update_setting">自动更新设置</string>
    <string name="auto_update_switch_summary_on">开启自动更新</string>
    <string name="auto_update_switch_summary_off">关闭自动更新</string>
    <string name="auto_update_frequency_title">更新频率</string>
    <string name="auto_update_frequency_summary">设置更新周期</string>
    <string name="isneilflag">是否匿名登录</string>
    <string name="username">帐号</string>
    <string name="password">密码</string>
    <string name="username_summary">提供您帐号</string>
    <string name="password_summary">提供您密码</string>
    <string name="update_key">update_key</string>
    <string name="auto_update_frequency_key">auto_update_frequency_key</string>
    <string name="isneilflag_key">isneilflag_key</string>
    <string name="username_key">username_key</string>
    <string name="password_key">password_key</string>

    <string-array name="auto_frequency_name">
        <item>10分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
        <item>12小时</item>
    </string-array>
    <string-array name="auto_frequency_value">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>720</item>
    </string-array>

</resources>