<?xml version="1.0" encoding="utf-8"?>
<!--  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_black"
    >
 
      <LinearLayout android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp">
          
          <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="服务器IP:"
              android:textSize="10pt"
              />
          <EditText android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:id="@+id/serverIp"
			          android:layout_marginRight="20dp"
			          android:digits="0123456789."
			          android:inputType="number"
			          />
      </LinearLayout>
    
      
      <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="15pt"
         android:layout_gravity="bottom"
         android:text="@string/setting"/>
</LinearLayout> -->


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting" >
    <PreferenceCategory android:title="@string/update" >
        <CheckBoxPreference
            android:key="@string/update_key"
            android:summaryOn="@string/auto_update_switch_summary_on"
            android:summaryOff="@string/auto_update_switch_summary_off"
            android:summary="@string/auto_update_setting"
            android:title="@string/auto_update_switch_title"
            android:defaultValue="true"
             />
        <ListPreference
            android:key="@string/auto_update_frequency_key"
            android:dialogTitle="@string/auto_update_frequency_title"
            android:entries="@array/auto_frequency_name"
            android:entryValues="@array/auto_frequency_value"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/auto_update_frequency_summary"
            android:title="@string/auto_update_frequency_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other" >
        <CheckBoxPreference
            android:key="@string/isneilflag_key"
            android:title="@string/isneilflag" 
            android:disableDependentsState="true"
            />
        <EditTextPreference
            android:dependency="@string/isneilflag_key"
            android:key="@string/username_key"
            android:summary="@string/username_summary"
            android:title="@string/username" />
        <EditTextPreference
            android:dependency="@string/isneilflag_key"
            android:key="@string/password_key"
            android:summary="@string/password_summary"
            android:title="@string/password" />
    </PreferenceCategory>
    
    <CheckBoxPreference
            android:key="@string/clearcache"
            android:summaryOn="@string/clearcache"
            android:summaryOff="@string/clearcache"
            android:summary="@string/clearcache"
            android:title="@string/clearcache"
            android:defaultValue="true"
    />

</PreferenceScreen>