<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_light_02"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/city_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="150dip"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_edit_shape"
        android:drawableLeft="@drawable/city_32"
        android:gravity="fill_horizontal"
        android:hint="@string/mycity"
        android:inputType="textPhonetic"
        android:scrollHorizontally="true"
        android:text="@string/dalian"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/username_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="left"
        android:text="@string/alert_dialog_from"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/from_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/search_edit_shape"
        android:drawableLeft="@drawable/travel_bus"
        android:gravity="fill_horizontal"
        android:hint="@string/address"
        android:inputType="textPhonetic"
        android:scrollHorizontally="true"
        android:text="@string/tongshitai"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="left"
        android:text="@string/alert_dialog_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/to_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/search_edit_shape"
        android:drawableLeft="@drawable/end"
        android:gravity="fill_horizontal"
        android:inputType="textPhonetic"
        android:scrollHorizontally="true"
        android:text="@string/des"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10pt" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/carRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/carRadioBtn" />

        <RadioButton
            android:id="@+id/busRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/busRadioBtn" />

        <RadioButton
            android:id="@+id/walkRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/walkRadioBtn" />
    </RadioGroup>

</LinearLayout>
