<?xml version="1.0" encoding="utf-8"?>
<!-- 插入整个布局的背景图片 -->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"  
    android:background="@drawable/bg_login_final"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"> 

    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="20dp"	
    	android:layout_marginRight="30dp"
    	android:layout_marginTop="130dp">  
   
    	<!-- 表格布局，包括账号和密码 -->
    	<TableLayout 
    		android:id="@+id/loginInfo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:stretchColumns="1">
    		<!-- 表格的第一行，账号文本和输入框，黑色粗体字，重心靠右，四周扩充5个像素 -->
    		<TableRow>
    			<!-- "账号"文本 -->
    			<TextView 
    				android:text="@string/idString"    				
    				android:textStyle="bold"
    				android:textColor="#000000"   
    				android:padding="5dip"  
    				android:gravity="right"
    				android:textSize="10pt"
    			/>       			
    			<!-- "账号"输入框，文本超出TextView的宽度的情况下，出现横拉条   -->
    			<EditText 
    				android:id="@+id/idEdit"
    				android:inputType="textEmailAddress"
    				android:scrollHorizontally="true"   
    				android:hint="@string/userid"  
    				android:drawableLeft="@drawable/user_32"
    				android:textSize="12pt"
    				android:layout_marginRight="10dp"
    				android:background="@drawable/search_edit_shape"
    							
    			/>
    		</TableRow>
    		<!-- 表格的第二行，密码和密码输入框，黑色粗体字，重心靠右，扩充5个像素 -->
    		<TableRow android:layout_marginTop="10dp">
    			<!-- "密码"文本 -->
    			<TextView 
    				android:text="密     码:"    				
    				android:textStyle="bold"
    				android:textColor="#000000"  
    				android:padding="5dip" 		
    				android:gravity="right"
    				android:textSize="10pt"		
    			/>
    			<!-- "密码"输入框；文本超出TextView的宽度的情况下，出现横拉条  -->
    			<EditText 
    				android:id="@+id/pwdEdit"
    				android:inputType="textPassword"
    				android:scrollHorizontally="true"  
    				android:textSize="12pt"
    				android:layout_marginRight="10dp"
    				android:drawableLeft="@drawable/lock2_32"
    				android:hint="@string/pwd"
    				android:background="@drawable/search_edit_shape"
    			/>
    		</TableRow>
    	</TableLayout>    	
    </LinearLayout>
    <!-- 相对布局，"记住密码"按钮和"自动登录"按钮 -->
    <RelativeLayout 
    	android:id="@+id/loginSet"    
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent">
    	<!-- "记住密码"多选框，黑体字，左缩进5个像素，选中状态 -->
        <CheckBox         	
        	android:id="@+id/remPwd" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="@string/remPwd" 
        	android:textColor="#000000"
        	android:checked="true"
        	android:layout_marginLeft="30dp"
        	/>
        <!-- "自动登录"多选框，黑体字，右缩进5个像素，与"记住密码"按钮的顶部和右边对齐 -->
        <CheckBox 
        	android:id="@+id/autoLogin" 
        	android:layout_width="wrap_content" 
        	android:text="@string/autologin" 
        	android:textColor="#000000"
        	android:layout_height="wrap_content" 
        	android:layout_marginRight="30dp"
        	android:layout_alignParentTop="true" 
        	android:layout_alignParentRight="true"/>    	
    </RelativeLayout>
    <!-- "登录"按钮，重心垂直居中，距顶部和底部3个像素，左右扩充80个像素 -->
    <Button 
    	android:id="@+id/loginBtn"
    	android:text="@string/loginString"
    	android:paddingTop="5dip"
    	android:paddingBottom="3dip"
    	android:paddingLeft="60dip"
    	android:paddingRight="60dip"    	
    	android:layout_width="wrap_content"    
    	android:layout_height="wrap_content"    	
    	android:layout_gravity="center_horizontal" 
    	android:textSize="11pt"
    	android:background="@drawable/button_style"
    	/>   	
     
	     <!-- 注册提示 -->
	   <LinearLayout
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:layout_marginTop="40dp"
	       >
	    			
		   <TextView
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:text="@string/registerText"
		       android:textColor="@android:color/background_dark"
		       android:paddingLeft="50dp"
		       android:textSize="10pt"
		       />
		   
		   <TextView 
		       android:id="@+id/register"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:text="@string/registerString"
		       android:textSize="13pt"
		       android:autoLink="all"
		       android:textColor="@android:color/background_light"
		       android:layout_marginLeft="8dp"
		       />
	</LinearLayout>
	
</LinearLayout>