<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_black"
    android:id="@+id/parent"
    android:textColor="@android:color/background_light"
    >
     
    <!-- 第一行按钮 -->
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	>
    	
    	<LinearLayout android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <ImageButton
		        android:id="@+id/cameraBtn"
		        android:layout_width="96dp"
		        android:layout_height="96dp"
		        android:layout_marginLeft="40dp"
		        android:layout_marginTop="50dp"
		        android:focusable="true"
		        android:clickable="true"
		        android:focusableInTouchMode="true"
		        android:background="@drawable/camera"
		        android:contentDescription="@string/desc"
		        />
    	    <TextView android:id="@+id/cameraTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/cameta"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="20dp"
    	        android:layout_gravity="center"/>
    	    
    	</LinearLayout>
    	
    	<!-- 网络相册按钮 -->
    	<LinearLayout android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	      <ImageButton
		        android:id="@+id/ablumsBtn"
		        android:layout_width="96dp"
		        android:layout_height="96dp"
		        android:layout_marginLeft="50dp"
		        android:layout_marginTop="50dp"
		        android:contentDescription="@string/desc"
		        android:background="@drawable/pictures" />
    	    <TextView android:id="@+id/albumTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/albums"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="25dp"
    	        android:layout_gravity="center"/>
    	    
    	</LinearLayout>
    </LinearLayout>			<!-- 第一行结束 -->
    
    <!-- 第二行按钮 -->
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
        
        <LinearLayout android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <!-- 聊天按钮 -->
    	       <ImageButton 
			    android:id="@+id/chatBtn"
			    android:layout_width="96dp"
			    android:layout_height="96dp"
			    android:background="@drawable/ichat"
			    android:layout_marginTop="10dp"
			    android:layout_marginLeft="40dp"
			    android:contentDescription="@string/desc"
	    		/>
    	    <TextView android:id="@+id/chatTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/chat"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="20dp"
    	        android:layout_gravity="center"/>
    	    
    	</LinearLayout>
    
      	<LinearLayout 
      	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <!-- 地图按钮 -->    
    	    <ImageButton 
			    android:id="@+id/mapBtn"
			    android:layout_width="96dp"
			    android:layout_height="96dp"
			    android:background="@drawable/map"
			    android:layout_marginTop="10dp"
			    android:contentDescription="@string/desc"
			    android:layout_marginLeft="50dp"
		    	/>
    	    <TextView android:id="@+id/mapTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/map"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="20dp"
    	        android:layout_gravity="center"/>
    	    
    	</LinearLayout>   
    </LinearLayout>			<!-- 第二行按钮结束 -->
    
     <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
      	
         <LinearLayout 
      	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <!-- 图像编辑按钮 -->    
    	     <ImageButton 
			    android:id="@+id/psBtn"
			    android:layout_width="96dp"
			    android:layout_height="96dp"
			    android:background="@drawable/adobe_photoshop"
			    android:layout_marginTop="10dp"
			    android:layout_marginLeft="40dp"
			    android:contentDescription="@string/desc"
		    	/>
    	    <TextView android:id="@+id/picTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/picedit"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="20dp"
    	        android:layout_gravity="center"/>
    	</LinearLayout>   
    
         <LinearLayout 
      	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
    	    <!-- 蓝牙按钮 -->    
    	       <ImageButton 
			    android:id="@+id/blueToothBtn"
			    android:layout_width="96dp"
			    android:layout_height="96dp"
			    android:background="@drawable/bluetooth_2"
			    android:layout_marginTop="10dp"
			    android:layout_marginLeft="50dp"
			android:contentDescription="@string/desc"
		    	/>
    	    <TextView android:id="@+id/btTextView"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:textSize="15dp"
    	        android:text="@string/bluetooth"
    	        android:textColor="@android:color/background_light"
    	        android:layout_marginLeft="20dp"
    	        android:layout_gravity="center"/>
    	    
    	</LinearLayout>   
     
    </LinearLayout>			<!-- 第三行按钮结束 -->

</LinearLayout>